netcat/netcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netcat-deployment
  namespace: broadvoice
  labels:
    app: netcat
spec:
  replicas: 0
  selector:
    matchLabels:
      app: netcat
  template:
    metadata:
      labels:
        app: netcat
    spec:
      containers:
      - name: netcat
        image: asantoshub/netcat:1.0.0
        imagePullPolicy: Always
        ports:
          - name: sip
            containerPort: 5060
            protocol: TCP
        resources:
          limits:
            cpu: 30m
          requests:
            cpu: 20m
