netcat/ingress-netcat.yaml
apiVersion: networking.k8s.io/v1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: netcat-ingress
  namespace: broadvoice

spec:
  defaultBackend:
    service:
      name: netcat-service
      port:
        number: 5060

  #  rules:
  #  - host: netcat.app.minikube.local
  #    http:
  #      paths:
  #      - pathType: None
  #        path: ""
  #        backend:
  #          service:
  #            name: netcat-internal-service
  #            port: 
  #              number: 5060
